chore(sandside): #194 refactor entity class into record